<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/item_home" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_view_module_black_24dp"
            android:title="@string/item_catagory" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/item_notification" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/item_favorite" />
        <item
            android:id="@+id/nav_fifth_fragment"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/item_ListPost" />
        <item
            android:id="@+id/nav_sixth_fragment"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/item_history" />
    </group>

    <item android:title="@string/item_setting">
    <menu>
        <group android:checkableBehavior="none">

            <item
                android:id="@+id/item_about"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/item_about" />
            <item
                android:id="@+id/item_condition"
                android:icon="@drawable/ic_assignment_black_24dp"
                android:title="@string/item_Condition" />
            <item
                android:id="@+id/item_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/item_Help" />
            <item
                android:id="@+id/item_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/item_logout" />
        </group>
    </menu>
    </item>
</menu>